--- a/smartutilitymanagment/app/src/main/AndroidManifest.xml
+++ b/smartutilitymanagment/app/src/main/AndroidManifest.xml
@@ -13,13 +13,21 @@
         android:theme="@style/Theme.SmartUtilityManagment"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".loginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".singupActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+
         </activity>
     </application>
 
