--- a/utiliwise/pubspec.yaml
+++ b/utiliwise/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   cloud_firestore: ^5.5.1
   firebase_storage: ^12.3.7
   image_picker: ^1.1.2
-
+  supabase_flutter: ^2.8.1
+  intl: ^0.20.1
+  url_launcher: ^6.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
