--- a/utiliwise/pubspec.yaml
+++ b/utiliwise/pubspec.yaml
@@ -39,14 +39,23 @@ dependencies:
   supabase_flutter: ^2.8.1
   intl: ^0.20.1
   url_launcher: ^6.3.1
+  firebase_messaging: ^15.1.6
+  upi_pay: ^1.1.0
+  geolocator: ^10.0.0
+  geocoding: ^3.0.0
+  flutter_map: ^7.0.2
+  firebase_core_web: ^2.20.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -57,9 +66,15 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/icon/app_icon.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
